# table-reservation-app

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  start.py
backend/alembic/: env.py
backend/alembic/versions/: 09a1890bc5ad_add_image_path_to_food_place_and_menu_.py  1e1fd8c005c6_add_image_path.py  5d870598c120_add_fields_to_food_basket.py  67a2a062d204_create_initial_schema_with_roles.py  a1b2c3d4e5f6_add_ratings_table.py  b2c3d4e5f6g7_add_restaurant_managers_table.py  c3d4e5f6g7h8_add_phone_to_users.py  f0ca41960823_add_is_active_to_menu_items_and_.py
backend/scripts/: load_test.py
backend/src/: main.py
backend/src/api_routers/: __init__.py  auth.py  food_basket.py  food_place.py  food_table.py  location.py  media.py  menu_item.py  rating.py  reservation.py  user.py
backend/src/core/: config.py  database.py  dependencies.py  exceptions.py  middleware.py  security.py  storage.py
backend/src/crud/: base.py  user_crud.py
backend/src/models/: __init__.py  basket_item.py  food_basket.py  food_place.py  food_table.py  location.py  menu_item.py  rating.py  reservation.py  role.py  user.py
backend/src/schemas/: auth.py  basket_item.py  food_basket.py  food_place.py  food_table.py  location.py  menu_item.py  rating.py  reservation.py  user.py
backend/tests/: conftest.py  test_auth.py  test_food_basket.py  test_reservation.py
docs/: db_schema.dbml
dumps/: dump.sql
frontend/: Dockerfile  index.html  style.css
frontend/css/: auth.css  booking.css  common.css  (+4 more)
(+9 files in other folders)
