[project]
name = "table-reservation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "passlib>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.30",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    "aioboto3>=13.0.0",
    "httpx>=0.27.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aiosqlite>=0.20.0",
    "pytest-cov>=4.1.0",
]

